[project]
name = "neal_rust"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "neal"
version = "0.1.0"
description = "An implementation of a simulated annealing sampler in Rust with a dimod Python wrapper"
authors = ["mullzhang <mullzhang@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dimod = "^0.12.13"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
mypy = "^1.7.1"
black = "^23.12.0"
pytest = "^7.4.3"
maturin = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=1.4,<2.0"]
build-backend = "poetry.core.masonry.api"
